# otel-log

./: CLAUDE.md  README.md
java/: Dockerfile  OpenTelemetry-Log4j-説明資料.md  podman-compose.yml  pom.xml
java/src/main/java/com/example/otel/: LoggingExample.java
java/src/main/resources/: log4j2.xml
python/: Dockerfile  OpenTelemetry-Python-説明資料.md  README.md  logging.conf  logging_config.yaml  podman-compose.yml  pyproject.toml  requirements.txt
python/src/example_otel/: __init__.py  logging_example.py
